.k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: theangrydevblog
  namespace: default
  labels:
    app: theangrydevblog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: theangrydevblog
  template:
    metadata:
      labels:
        app: theangrydevblog
    spec:
      containers:
        - name: theangrydevblog
          image: iamprithaj/theangrydevblog:$COMMIT_SHA1
          ports:
            - containerPort: 9000
              name: http
