.k8s/load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: theangrydev-load-balancer
  namespace: default
  labels:
      app: theangrydevblog
spec:
  selector:
    app: theangrydevblog
  ports:
    - port: 80
      targetPort: http
  type: LoadBalancer
